# calculator

./: .cookiecutter.json  CONTRIBUTING.md  LICENSE  main.py  noxfile.py  pyproject.toml  requirements.txt
app/: cli.py  core.py
docs/: conf.py  index.md  reference.md  usage.md
py_calculator/: CODE_OF_CONDUCT.md  README.md  pyproject.toml
py_calculator/src/app/: __main__.py  cli.py
py_calculator/tests/: test_core.py  test_main.py
src/app/: __main__.py  cli.py  core.py
tests/: __init__.py  test_core.py  test_main.py
