[tool.poetry]
name = "calculator"
version = "0.1.0"
description = "A simple command-line calculator"
authors = ["Roksolana K. <roksolanaa.kalinska@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
pytest = "^8.2.1"
mypy = "^1.10.0"

[tool.poetry.scripts]
calculator = "app.__main__:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
pretty = true
warn_unused_configs = true
show_column_numbers = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
